Retheme storefront for Valeria Doces

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Store</title>
-    <meta name="description" content="Catálogo digital com ofertas e destaques do Instagram." />
+    <title>Store Valeria Doces</title>
+    <meta name="description" content="Catálogo mobile-first da Store Valeria Doces com bolos, doces artesanais e pedidos rápidos pelo WhatsApp." />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet" />
